feat: Update project name and add Firebase dependency
Updates the project name across various configuration files (package.json, index.html, metadata.json) to use a shorter, more consistent format. Also, adds the Firebase dependency to package.json, indicating preparation for Firebase integration. Removes outdated `Page` type and related props from components to streamline navigation logic towards a section-based approach.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soumik-bairagi---personal-portfolio",
+  "name": "soumik---personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react-dom": "^19.1.1",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
