--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "firebase": "^12.2.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "framer-motion": "11.0.8",
+    "@google/genai": "0.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
